src/objects/CO_Score__c.object
<CustomObject>
    <fields>
        <fullName>Cheerful_Raw__c</fullName>
        <label>Cheerful Raw</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheerful__c</fullName>
        <formula>IF(
AND(
OR(
TEXT( Feedback_Type__c )=&apos;Direct Report&apos;,
TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;,
TEXT( Feedback_Type__c )=&apos;Overall&apos;,
TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,
TEXT( Feedback_Type__c )=&apos;Collaborator&apos;
),
 Raters__c  &lt; 3
),
0,
Cheerful_Raw__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheerful</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <formula>Employee__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Manager__c</fullName>
        <formula>Employee__r.Manager.User_ID_18_digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emp Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Feedback</label>
        <referenceTo>CO_Feed__c</referenceTo>
        <relationshipLabel>CO Score</relationshipLabel>
        <relationshipName>CO_Score</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name_F__c</fullName>
        <formula>Employee__r.Shortened_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Score</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engaged_Raw__c</fullName>
        <label>Engaged Raw</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <formula>IF( 
AND( 
OR( 
TEXT( Feedback_Type__c )=&apos;Direct Report&apos;, 
TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;, 
TEXT( Feedback_Type__c )=&apos;Overall&apos;, 
TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,
TEXT( Feedback_Type__c )=&apos;Collaborator&apos; 
), 
Raters__c &lt; 3 
), 
0,  Engaged_Raw__c  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FM_Name__c</fullName>
        <formula>Employee_Feedback__r.Functional_Manager__r.Shortened_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackType__c</fullName>
        <formula>CASE(Feedback_Type__c,
&quot;Direct Report&quot;, &quot;Direct Report&quot;,
&quot;General Manager&quot;, &quot;GM/Matrixed Manager&quot;,
&quot;Collaborator&quot;, &quot;Direct Collaborators&quot;,
&quot;All Collaborator&quot;, &quot;All Collaborator&quot;,
&quot;Functional Manager&quot;, &quot;Functional Manager&quot;,
&quot;Indirect Report&quot;, &quot;Indirect Report&quot;,
&quot;Overall&quot;, &quot;Overall&quot;,
&quot;Leadership Skills&quot;, &quot;Leadership Skills&quot;,
&quot;Other Collaborator&quot;, &quot;Other Collaborator&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
                <value>
                    <fullName>All Collaborator</fullName>
                </value>
                <value>
                    <fullName>Leadership Skills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GM_Name__c</fullName>
        <formula>IF(Employee_Feedback__r.Other__c != null, Employee_Feedback__r.Other__r.Shortened_Full_Name__c,Employee_Feedback__r.General_Manager__r.Shortened_Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeritBU__c</fullName>
        <formula>Employee__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merit BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precise_Agile_Transparent__c</fullName>
        <formula>IF( 
AND( 
OR( 
TEXT( Feedback_Type__c )=&apos;Direct Report&apos;, 
TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;, 
TEXT( Feedback_Type__c )=&apos;Overall&apos;, 
TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,
TEXT( Feedback_Type__c )=&apos;Collaborator&apos; 
), 
Raters__c &lt; 3 
), 
0, Precise_Raw__c  
)</formula>
        <label>Precise, Agile &amp; Transparent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precise_Raw__c</fullName>
        <label>Precise Raw</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q32017</fullName>
                </value>
                <value>
                    <fullName>Q42017</fullName>
                </value>
                <value>
                    <fullName>Q12018</fullName>
                </value>
                <value>
                    <fullName>Q22018</fullName>
                </value>
                <value>
                    <fullName>Q32018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Raters__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Raters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Employee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Raters__c</fullName>
        <description>Total number of raters for the specific score type.</description>
        <inlineHelpText>Total number of raters for the specific score type.</inlineHelpText>
        <label># Total Raters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CO Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feedback_Type__c</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee__c</field>
            <operation>contains</operation>
            <value>Amritha</value>
        </filters>
        <filters>
            <field>Quarter__c</field>
            <operation>equals</operation>
            <value>Q32018</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CO Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CO Score</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>